--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
-requires = ['setuptools', 'wheel']
+requires = ['setuptools >= 38.2.4',
+            'wheel >= 0.30.0']
 build-backend = 'setuptools:build_meta'
 
 [tool.tox3]
