--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,18 @@ requires = ['setuptools >= 38.2.4']
 build-backend = 'setuptools:build_meta'
 
 [tool.tox3]
-    envlist = ['env']
+    envlist = ['py36', 'py35']
 
     [tool.tox3.env]
         basepython = 'python3.6'
         description = 'run the unit tests with pytest under {basepython}'
-        commands = ["python -c \"import sys; print(sys.executable)\" ",
-                     """python -c \"import os; print('\\n'.join(str(i) for i in os.environ.items()))\" """]
+        commands = ["python -c \"import sys; print(sys.executable, sys.version)\" "]
 
     [tool.tox3.env._build]
         basepython = 'python3.6'
 
-    [tool.tox3.env.print_test]
-        commands = ["python -c 'print(3.5)'"]
+    [tool.tox3.env.py36]
+        basepython = 'python3.6'
 
-
-
+    [tool.tox3.env.py35]
+        basepython = 'python3.5'
