--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['setuptools >= 38.2.4']
 build-backend = 'setuptools:build_meta'
 
 [tool.tox3]
-    envlist = ['py36', 'py35']
+    envlist = ['py36', 'py35', 'py27']
 
     [tool.tox3.env]
         description = 'run the unit tests with pytest under {basepython}'
@@ -18,3 +18,7 @@ build-backend = 'setuptools:build_meta'
 
     [tool.tox3.env.py35]
         commands = ["python -c \"import sys; print(sys.executable, sys.version)\" "]
+
+    [tool.tox3.env.py27]
+        commands = ["python -c \"import sys; print(sys.executable, sys.version)\" "]
+
