--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ build-backend = 'setuptools:build_meta'
   basepython = 'python3.6'
 
 [tool.tox3.env.py36]
-  commands = ["pytest tests"]
+  commands = ["pytest tests --cov={envsitepackagesdir}/tox3"]
