--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = 'setuptools:build_meta'
 [tool.tox3.env]
   description = 'run the unit tests with pytest'
   extras = ["testing"]
-  build_wheel = false
+  build_wheel = true
 
 [tool.tox3.env._build]
   basepython = 'python3.6'
