--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,8 @@ build-backend = 'setuptools.build_meta'
 [tool.tox3.env.type]
    deps = ["mypy >= 0.560, <1"]
    commands = ["python -m mypy src --strict"]
+
+[tool.tox3.env.dev]
+   extras = ['testing']
+   commands = ["pip list --format=columns",
+           	   "python -c 'import sys;print(sys.version);print(sys.executable)'"]
