--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,22 +3,30 @@ requires = ['setuptools >= 38.2.4']
 build-backend = 'setuptools.build_meta'
 
 [tool.tox3]
-  envlist = ['py36', 'type']
+envlist = ['py36', 'type']
+
 
 [tool.tox3.env]
-  description = 'run the unit tests with pytest'
-  build_wheel = true
-  basepython = 'python3.6'
+description = 'run the unit tests with pytest'
+basepython = 'python3.6'
+install_command = "pip install -U"
+
+[tool.tox3.env._build]
+build_wheel = true
 
 [tool.tox3.env.py36]
-  extras = ['testing']
-  commands = ['pytest --cov="<envsitepackagesdir>/tox3" --cov-report=term-missing:skip-covered tests']
+extras = ['testing']
+commands = ['pytest --cov="<envsitepackagesdir>/tox3" --cov-report=term-missing:skip-covered tests <posargs>']
 
 [tool.tox3.env.type]
-   deps = ["mypy >= 0.560, <1"]
-   commands = ["python -m mypy src --strict"]
+deps = ["mypy >= 0.560, <1"]
+commands = ["python -m mypy src --strict"]
 
 [tool.tox3.env.dev]
-   extras = ['testing']
-   commands = ["pip list --format=columns",
-           	   "python -c 'import sys;print(sys.version);print(sys.executable)'"]
+extras = ['testing']
+usedevelop = true
+install_build_requires = true
+install_for_build_requires = true
+commands = ["pip list --format=columns",
+           "python -c 'import sys;print(sys.version);print(sys.executable)'"]
+
