--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,19 @@
 [bdist_wheel]
-universal=1
+universal = 1
+
+[coverage:run]
+branch = False
+parallel = False
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+ignore_errors = False
+precision = 2
+show_missing = True
+skip_covered = True
+sort = Cover
+
+[coverage:paths]
+source = src/tox3
+         */lib/python*/site-packages/tox3
+         */Lib/site-packages/tox3
