--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,52 @@
+# build system
 [build-system]
 requires = ['setuptools >= 38.2.4']
 build-backend = 'setuptools.build_meta'
 
+# tox configuration
 [tool.tox3]
-envlist = ['py36', 'type']
+envlist = ['py36', 'combine', 'type']
 
 [tool.tox3.env]
-description = 'run the unit tests with pytest'
+basepython = 'python'
 install_command = "pip install -U"
-extras = ['testing']
-commands = ['pytest --cov="<envsitepackagesdir>/tox3" --cov-report=term-missing:skip-covered tests <posargs>']
-
-[tool.tox3.env.set_env]
-COVERAGE_FILE="<work_dir>/.coverage.<envname>"
-
 
 [tool.tox3.env._build]
-basepython = 'python3.6'
 build_wheel = true
 
+[tool.tox3.env.py36]
+basepython="python36"
+description = 'run the unit tests with pytest'
+change_dir = '<envsitepackagesdir>'
+commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> <root_dir>/tests',
+             'coverage report --rcfile="<root_dir>/setup.cfg"']
+set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
+extras = ['testing']
+
+[tool.tox3.env.py]
+description = 'run the unit tests with pytest and whatever the current python is'
+change_dir = '<envsitepackagesdir>'
+commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> <root_dir>/tests',
+             'coverage report --rcfile="<root_dir>/setup.cfg"']
+set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
+extras = ['testing']
+
+[tool.tox3.env.codecov]
+pass_env = ["CI", "TRAVIS", "TRAVIS_*", "CODECOV_ENV", "APPVEYOR_*", "APPVEYOR"]
+description = "[only run on CI]: upload coverage data to codecov (depends on coverage running first)"
+deps = ["codecov >= 2.0.13, <3"]
+set_env = {COVERAGE_FILE="<work_dir>/.coverage"}
+commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
+             'coverage xml -o <work_dir>/coverage.xml',
+             'codecov --file <work_dir>/coverage.xml']
+
 [tool.tox3.env.type]
-basepython = 'python3.6'
 deps = ["mypy >= 0.560, <1"]
 commands = ["python -m mypy src --strict"]
 
 [tool.tox3.env.dev]
-basepython = 'python3.6'
 extras = ['testing']
-usedevelop = true
+use_develop = true
 install_build_requires = true
 install_for_build_requires = true
 commands = ["pip list --format=columns",
