--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,10 @@ install_command = "pip install -U"
 build_wheel = true
 
 [tool.tox3.env.py36]
-basepython="python36"
+basepython="python3.6"
 description = 'run the unit tests with pytest'
 change_dir = '<envsitepackagesdir>'
-commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> <root_dir>/tests',
+commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> "<root_dir>/tests"',
              'coverage report --rcfile="<root_dir>/setup.cfg"']
 set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
 extras = ['testing']
@@ -26,7 +26,7 @@ extras = ['testing']
 [tool.tox3.env.py]
 description = 'run the unit tests with pytest and whatever the current python is'
 change_dir = '<envsitepackagesdir>'
-commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> <root_dir>/tests',
+commands = ['coverage run --rcfile="<root_dir>/setup.cfg" --source=tox3  -m pytest <posargs> "<root_dir>/tests"',
              'coverage report --rcfile="<root_dir>/setup.cfg"']
 set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
 extras = ['testing']
@@ -37,8 +37,8 @@ description = "[only run on CI]: upload coverage data to codecov (depends on cov
 deps = ["codecov >= 2.0.13, <3"]
 set_env = {COVERAGE_FILE="<work_dir>/.coverage"}
 commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
-             'coverage xml -o <work_dir>/coverage.xml',
-             'codecov --file <work_dir>/coverage.xml']
+             'coverage xml -o "<work_dir>/coverage.xml"',
+             'codecov --file "<work_dir>/coverage.xml"']
 
 [tool.tox3.env.type]
 deps = ["mypy >= 0.560, <1"]
