--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = 'setuptools.build_meta'
 
 # tox configuration
 [tool.tox3]
-envlist = ['py36', 'combine', 'type']
+envlist = ['py36', 'combine', 'type', 'doc']
 
 [tool.tox3.env]
 basepython = 'python'
@@ -43,6 +43,11 @@ commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
 [tool.tox3.env.type]
 deps = ["mypy >= 0.560, <1"]
 commands = ["python -m mypy src --strict"]
+
+[tool.tox3.env.doc]
+extras = ['doc']
+commands = [ 'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html',
+             'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
 
 [tool.tox3.env.dev]
 extras = ['testing']
