--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
 extras = ['testing']
 
 [tool.tox3.env.codecov]
+skip_install = true
 pass_env = ["CI", "TRAVIS", "TRAVIS_*", "CODECOV_ENV", "APPVEYOR_*", "APPVEYOR"]
 description = "[only run on CI]: upload coverage data to codecov (depends on coverage running first)"
 deps = ["codecov >= 2.0.13, <3"]
@@ -45,6 +46,7 @@ deps = ["mypy >= 0.560, <1"]
 commands = ["python -m mypy src --strict"]
 
 [tool.tox3.env.doc]
+skip_install = true
 extras = ['doc']
 commands = [ 'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html',
              'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
