--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 requires = ['setuptools >= 38.2.4']
 build-backend = 'setuptools.build_meta'
 
-# tox configuration
 [tool.tox3]
 envlist = ['py36', 'type', 'doc']
 
@@ -33,8 +32,8 @@ description = "[CI]: upload coverage data to codecov (depends on coverage runnin
 deps = ["codecov >= 2.0.13, <3"]
 set_env = {COVERAGE_FILE="<work_dir>/.coverage"}
 commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
-             'coverage xml -o "<work_dir>/coverage.xml"',
-             'codecov --file "<work_dir>/coverage.xml"']
+            'coverage xml -o "<work_dir>/coverage.xml"',
+            'codecov --file "<work_dir>/coverage.xml"']
 
 [tool.tox3.env.type]
 description = "run mypy and check for type violations of the code base"
@@ -42,10 +41,10 @@ deps = ["mypy >= 0.560, <1"]
 commands = ["python -m mypy src --strict"]
 
 [tool.tox3.env.doc]
-description = "generate the project documenntation into <work_dir>/docs_out"
+description = "generate the project documenntation into <work_dir>/docs_out and check links are valid"
 extras = ['doc']
-commands = [ 'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html',
-             'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
+commands = ['sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html',
+            'sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
 
 [tool.tox3.env.dev]
 description = "generates a development environment with all this projects dependencies, and in-place install of the package"
@@ -54,5 +53,5 @@ use_develop = true
 install_build_requires = true
 install_for_build_requires = true
 commands = ["pip list --format=columns",
-           "python -c 'import sys;print(sys.version);print(sys.executable)'"]
+            "python -c 'import sys;print(sys.version);print(sys.executable)'"]
 
