--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,6 @@ skip_covered = True
 sort = Cover
 
 [coverage:paths]
-source = src/tox3
-         */lib/python*/site-packages/tox3
-         */Lib/site-packages/tox3
+source = src/toxn
+         */lib/python*/site-packages/toxn
+         */Lib/site-packages/toxn
