--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,55 +5,55 @@ build-backend = 'setuptools.build_meta'
 [tool.toxn]
 default_tasks = ['test', 'type', 'doc', 'doc_link'] # this tasks will be run when invoked with no arg
 
-  [task]
-  python_requires=">=3.6" # the python requires to run these tasks
+[tool.toxn.task]
+python_requires=">=3.6" # the python requires to run these tasks
 
-    [build]
-    # cleanup setuptools build folders
-    tear_down = ["python setup.py clean --all",
-                 """python -c 'import shutil; shutil.rmtree(\"dist\", True); shutil.rmtree(\".eggs\", True)'"""]
+[tool.toxn.task.build]
+# cleanup setuptools build folders
+tear_down = ["python setup.py clean --all",
+             """python -c 'import shutil; shutil.rmtree(\"dist\", True); shutil.rmtree(\".eggs\", True)'"""]
 
-    [test]
-    description = 'run the unit tests with pytest and coverage report'
-    change_dir = '<envsitepackagesdir>'
-    commands = ['python -m pytest --cov-config="<root_dir>/setup.cfg" --cov=toxn "<root_dir>/tests" <posargs> -n auto']
-    set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
-    extras = ['testing']
+[tool.toxn.task.test]
+description = 'run the unit tests with pytest and coverage report'
+change_dir = '<envsitepackagesdir>'
+commands = ['python -m pytest --cov-config="<root_dir>/setup.cfg" --cov=toxn "<root_dir>/tests" <posargs> -n auto']
+set_env = {COVERAGE_FILE="<work_dir>/.coverage.<envname>"}
+extras = ['testing']
 
-    [codecov]
-    dependson = ["test"]
-    skip_install = true
-    pass_env = ["CI", "TRAVIS", "TRAVIS_*", "CODECOV_ENV", "APPVEYOR_*", "APPVEYOR"]
-    description = "[CI]: upload coverage data to codecov (depends on coverage running first)"
-    deps = ["codecov >= 2.0.13, <3"]
-    set_env = {COVERAGE_FILE="<work_dir>/.coverage"}
-    commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
-                'coverage xml -o "<work_dir>/coverage.xml"',
-                'codecov --file  "<work_dir>/coverage.xml"']
+[tool.toxn.task.codecov]
+dependson = ["test"]
+skip_install = true
+pass_env = ["CI", "TRAVIS", "TRAVIS_*", "CODECOV_ENV", "APPVEYOR_*", "APPVEYOR"]
+description = "[CI]: upload coverage data to codecov (depends on coverage running first)"
+deps = ["codecov >= 2.0.13, <3"]
+set_env = {COVERAGE_FILE="<work_dir>/.coverage"}
+commands = ['coverage combine --rcfile="<root_dir>/setup.cfg"',
+            'coverage xml -o "<work_dir>/coverage.xml"',
+            'codecov --file  "<work_dir>/coverage.xml"']
 
-    [type]
-    description = "run mypy and check for type violations of the code base"
-    deps = ["mypy >= 0.560, <1"]
-    commands = ["python -m mypy src --strict"]
+[tool.toxn.task.type]
+description = "run mypy and check for type violations of the code base"
+deps = ["mypy >= 0.560, <1"]
+commands = ["python -m mypy src --strict"]
 
-    [doc]
-    pass_env =["http_proxy", "https_proxy", "no_proxy", "SSL_CERT_FILE"]
-    description = "generate the project documenntation into <work_dir>/docs_out"
-    extras = ['doc']
-    commands = ['sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html <posargs>']
+[tool.toxn.task.doc]
+pass_env =["http_proxy", "https_proxy", "no_proxy", "SSL_CERT_FILE"]
+description = "generate the project documenntation into <work_dir>/docs_out"
+extras = ['doc']
+commands = ['sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b html <posargs>']
 
-    [doc_link]
-    base = "doc"
-    description = "check that links in the documentation are valid (redirect/ok)"
-    commands = ['sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
+[tool.toxn.task.doc_link]
+base = "doc"
+description = "check that links in the documentation are valid (redirect/ok)"
+commands = ['sphinx-build -d "<work_dir>/docs_doctree" doc "<work_dir>/docs_out" --color -W -b linkcheck']
 
 
-    [dev]
-    description = "generates a development environment with all this projects dependencies, and in-place install of the package"
-    extras = ['testing', 'doc']
-    use_develop = true
-    install_build_requires = true
-    install_for_build_requires = true
-    commands = ["pip list --format=columns",
-          "python -c 'import sys;print(sys.version);print(sys.executable)'"]
+[tool.toxn.task.dev]
+description = "generates a development environment with all this projects dependencies, and in-place install of the package"
+extras = ['testing', 'doc']
+use_develop = true
+install_build_requires = true
+install_for_build_requires = true
+commands = ["pip list --format=columns",
+      "python -c 'import sys;print(sys.version);print(sys.executable)'"]
 
