--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,7 @@ build: false  # Not a C# project
 environment:
   matrix:
     - PY_VER: "36"
-      ENV: "py"
+      ENV: "test"
 
 matrix:
   fast_finish: true
@@ -13,12 +13,12 @@ install:
 
 test_script:
   - python.exe -m pip list --format=columns
-  - python.exe -m toxn -v DEBUG -e %ENV%
+  - python.exe -m toxn -v DEBUG -t %ENV%
 
 
 after_test:
   - set CODECOV_ENV=%ENV%-%PY_VER%
-  - python.exe -m toxn -v DEBUG -e codecov
+  - python.exe -m toxn -v DEBUG -t codecov
 
 cache:
   - '%LOCALAPPDATA%\pip\cache'
